--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
     "@capacitor/preferences": "^7.0.0",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/leaflet": "^1.9.17",
     "@types/react-redux": "^7.1.34",
+    "axios": "^1.11.0",
     "date-fns": "^2.25.0",
     "ionicons": "^7.1.2",
     "leaflet": "^1.9.4",
+    "normalizr": "^3.6.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-leaflet": "^5.0.0",
