feat(docker): set up Docker configuration for backend, frontend, and database services; update build and output directories

--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -3,6 +3,6 @@
   "appName": "ionic-react-conference-app",
   "bundledWebRuntime": false,
   "npmClient": "npm",
-  "webDir": "dist",
+  "webDir": "export/web",
   "cordova": {}
 }
