feat(docker): update Dockerfiles to use Node.js 20 and add explicit image tags for Podman compatibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,13 @@ FROM oven/bun:latest
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy package.json and bun.lock for dependency installation
-COPY package.json bun.lock* ./
+# Copy package.json
+COPY package.json ./
 
 # Install dependencies using Bun
-RUN bun install --frozen-lockfile --production
+# Removed --frozen-lockfile to allow lockfile updates during build.
+# It's recommended to commit an up-to-date bun.lockb locally.
+RUN bun install --production
 
 # Copy the rest of the application code
 COPY . .
@@ -18,3 +20,6 @@ EXPOSE 3001
 
 # Define the command to run the app
 CMD ["bun", "start"]
+
+# Tag the image with localhost/ for Podman compatibility
+LABEL org.opencontainers.image.source=localhost/solfin_backend
