feat(frontend): update Dockerfile to use Bun for dependency management and build process; enhance type safety in selectors and state management

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "dev": "vite",
     "ionic:serve": "vite",
     "ionic:build": "tsc && vite build",
-    "build": "tsc && vite build",
+    "build": "bun run tsc && bun run vite build",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
     "precommit": "npm run format && lint-staged",
