Enhance documentation and structure for ShardManager and migrations
- Improved JSDoc comments for ShardManager class and its methods, providing detailed descriptions and parameter types.
- Updated migration files (001_create_initial_tables.js, 002_add_enhanced_features.js) with comprehensive module-level documentation and method descriptions.
- Refined seeders (001_demo_users.js to 005_demo_transfers.js) with enhanced comments, structured documentation, and consistent hardcoded IDs for demo data.
- Added error handling improvements in seeders to ensure idempotent operations and clearer logging.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,7 @@ COPY package.json ./
 # Install dependencies using Bun
 # Removed --frozen-lockfile to allow lockfile updates during build.
 # It's recommended to commit an up-to-date bun.lockb locally.
-RUN bun install --production
+RUN bun install --production # Invalidate cache
 
 # Copy the rest of the application code
 COPY . .
