--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "jest": "^30.0.5",
