--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,10 @@ services:
     image: localhost/solfin_frontend:latest # Explicitly tag local image
     container_name: solfin_frontend
     ports:
-      - "80:80"
+      - "8080:8080"
     environment:
-      - VITE_API_BASE_URL=http://localhost:3001 # Point to backend service
+      - VITE_API_BASE_URL=http://backend:3001 # Point to backend service
+      - VITE_FRONTEND_PORT=8080
     depends_on:
       - backend
     restart: always
