--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "fastify": "^5.4.0",
-    "bcrypt": "^5.1.1"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "jest": "^30.0.5",
