--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "fastify": "^5.4.0",
+    "fastify-plugin": "^5.0.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
